--- a/src/ui/compose/ComposePage.css
+++ b/src/ui/compose/ComposePage.css
@@ -9,7 +9,7 @@
 .composer {
     background-color: white;
     border-radius: 1rem;
-    padding: 1.5rem 1.5rem 1.75rem 1.5rem;
+    padding: 1.5rem 1.5rem 1.75rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
