--- a/src/ui/control/dropdownmenu/DropdownMenu.css
+++ b/src/ui/control/dropdownmenu/DropdownMenu.css
@@ -10,7 +10,7 @@
 
 .dropdown-menu .caption {
     font-weight: bold;
-    padding: 0 .6rem .5rem .6rem;
+    padding: 0 .6rem .5rem;
 }
 
 .dropdown-menu .dropdown-item {
