--- a/src/ui/control/field/AvatarField.css
+++ b/src/ui/control/field/AvatarField.css
@@ -16,8 +16,7 @@
     cursor: default;
     width: max-content;
     max-height: calc(312px + .75rem);
-    overflow-y: auto;
-    overflow-x: hidden;
+    overflow: hidden auto;
     overscroll-behavior-y: none;
 }
 
