--- a/src/ui/settings/profile/avatar/AvatarSelector.css
+++ b/src/ui/settings/profile/avatar/AvatarSelector.css
@@ -5,8 +5,7 @@
     cursor: default;
     width: max-content;
     max-height: calc(312px + .75rem);
-    overflow-y: auto;
-    overflow-x: hidden;
+    overflow: hidden auto;
     overscroll-behavior-y: none;
 }
 
