--- a/src/bootstrap.scss
+++ b/src/bootstrap.scss
@@ -8,6 +8,8 @@
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/variables-dark";
 
+$enable-negative-margins:     true;
+
 $nav-tabs-link-active-color:  $gray-800;
 $nav-link-color:              $gray-600;
 $nav-link-hover-color:        $gray-700;
