--- a/src/ui/App.css
+++ b/src/ui/App.css
@@ -8,9 +8,10 @@
 :root:root {
     scroll-behavior: auto;
     scrollbar-gutter: stable;
-    --bs-font-sans-serif: -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans",
-                          sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-    --font-messages: Montserrat, var(--bs-font-sans-serif);
+
+    --bs-font-sans-serif: -apple-system, "Segoe UI", "Roboto", "Helvetica Neue", "Arial", "Noto Sans",
+        "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+    --font-messages: "Montserrat", var(--bs-font-sans-serif);
 }
 
 HTML {
@@ -19,7 +20,7 @@ HTML {
 }
 
 BODY {
-    background-color: var(--body-background);
+    background-color: var(--body-bg);
     padding-bottom: 2rem;
     height: 100%;
 }
