--- a/src/ui/control/FeedTopBox.css
+++ b/src/ui/control/FeedTopBox.css
@@ -13,7 +13,7 @@
     display: inline-block;
     padding: .15rem .8rem .4rem .5rem;
     border-radius: 1em;
-    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .16);
+    box-shadow: 0 4px 12px 0 rgb(0 0 0 / 16%);
     cursor: pointer;
     font-size: .875rem;
     font-weight: 400;
