--- a/src/ui/control/Popover.css
+++ b/src/ui/control/Popover.css
@@ -1,7 +1,7 @@
 .popover {
     pointer-events: none;
     max-width: none;
-    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, .16);
+    box-shadow: 0 12px 16px 0 rgb(0 0 0 / 16%);
 }
 
 .popover.show {
