--- a/src/ui/entry/EntryImage.css
+++ b/src/ui/entry/EntryImage.css
@@ -28,6 +28,6 @@
     color: white;
     font-weight: bold;
     font-size: 200%;
-    text-shadow: -2px 2px 4px var(--shadow);
+    text-shadow: -2px 2px 4px rgb(0 0 0 / 75%);
     z-index: var(--zindex-text-overlay);
 }
