--- a/src/ui/feed/FeedGotoButton.css
+++ b/src/ui/feed/FeedGotoButton.css
@@ -25,10 +25,6 @@
 }
 
 @media only screen and (max-width: 991px) {
-    #page-header.hidden .feed-goto-button .bottom {
-        display: none;
-    }
-
     .feed-goto-button .bottom {
         position: absolute;
         top: 3rem;
@@ -37,7 +33,7 @@
         width: 2.5rem;
         height: 2.5rem;
         background-color: white;
-        box-shadow: 0 1px 3px 0 rgba(0, 0, 0, .3), 0 4px 8px 3px rgba(0, 0, 0, .15);
+        box-shadow: 0 1px 3px 0 rgb(0 0 0 / 30%), 0 4px 8px 3px rgb(0 0 0 / 15%);
         z-index: var(--zindex-feed-top-button);
     }
 
@@ -45,6 +41,10 @@
         width: 20px;
         height: 20px;
         vertical-align: -.5em;
+    }
+
+    #page-header.hidden .feed-goto-button .bottom {
+        display: none;
     }
 }
 
