--- a/src/ui/flashbox/FlashBox.css
+++ b/src/ui/flashbox/FlashBox.css
@@ -3,7 +3,7 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, .7);
+    background-color: rgb(0 0 0 / 70%);
     color: white;
     border-radius: .35rem;
     padding: .5rem .7rem;
