--- a/src/ui/instant/Instants.css
+++ b/src/ui/instant/Instants.css
@@ -24,7 +24,7 @@
 }
 
 #instants .header {
-    padding: 0 0 .8rem 0;
+    padding: 0 0 .8rem;
     border-bottom: 1px solid var(--bs-gray-100);
     margin-bottom: 1rem;
     display: flex;
@@ -54,7 +54,7 @@
 
 #instants > .footer {
     height: 2.5rem;
-    padding: .75rem .75rem 0 .75rem;
+    padding: .75rem .75rem 0;
     margin-top: 1rem;
     margin-bottom: -.25rem;
     border-top: 1px solid var(--bs-gray-100);
