--- a/src/ui/mainmenu/owner/OwnerNavigator.css
+++ b/src/ui/mainmenu/owner/OwnerNavigator.css
@@ -21,7 +21,7 @@
     padding-bottom: .25rem;
     background-color: white;
     border: 0;
-    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.16);
+    box-shadow: 0 12px 16px 0 rgb(0 0 0 / 16%);
 }
 
 #owner-navigator .name-select HR {
