--- a/src/ui/nodename/NodeCard.css
+++ b/src/ui/nodename/NodeCard.css
@@ -1,5 +1,5 @@
 .node-card {
-    padding: .25rem .25rem .5rem .25rem;
+    padding: .25rem .25rem .5rem;
 }
 
 @media only screen and (max-width: 991px) {
