--- a/src/ui/page/BackBox.css
+++ b/src/ui/page/BackBox.css
@@ -13,7 +13,7 @@
 }
 
 .back-box-inner.back-box-shadow {
-    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, .16);
+    box-shadow: 0 12px 16px 0 rgb(0 0 0 / 16%);
     transition: box-shadow .2s ease;
 }
 
@@ -37,7 +37,7 @@
     .back-box {
         top: 2.7rem;
         padding-top: .25rem;
-        background-color: var(--body-background);
+        background-color: var(--body-bg);
     }
 }
 
