--- a/src/ui/page/MobileBack.css
+++ b/src/ui/page/MobileBack.css
@@ -17,7 +17,7 @@
 }
 
 .mobile-back.sticky.mobile-back-shadow {
-    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, .16);
+    box-shadow: 0 12px 16px 0 rgb(0 0 0 / 16%);
     transition: box-shadow .2s ease;
 }
 
