--- a/src/ui/page/PageHeader.css
+++ b/src/ui/page/PageHeader.css
@@ -5,9 +5,9 @@
     background-color: white;
     margin-bottom: .5rem;
     z-index: var(--zindex-page-header);
-    box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14),
-                0 1px 10px 0 rgba(0, 0, 0, .12),
-                0 2px 4px -1px rgba(0, 0, 0, .2);
+    box-shadow: 0 4px 5px 0 rgb(0 0 0 / 14%),
+                0 1px 10px 0 rgb(0 0 0 / 12%),
+                0 2px 4px -1px rgb(0 0 0 / 20%);
     transition: all .5s;
 }
 
@@ -32,6 +32,10 @@
     margin-right: auto;
 }
 
+#page-header > .btn {
+    margin-left: .5rem;
+}
+
 #page-header H2 {
     margin-left: .3em;
     line-height: 1.6;
@@ -53,10 +57,6 @@
     #page-header H2 .subscribe-button {
         vertical-align: .1em;
     }
-}
-
-#page-header > .btn {
-    margin-left: .5rem;
 }
 
 #page-header .page-header-buttons {
