--- a/src/ui/people/PeoplePerson.css
+++ b/src/ui/people/PeoplePerson.css
@@ -32,7 +32,7 @@
 
 .people-page .person .avatar-selector .selection {
     position: absolute;
-    background: rgba(0, 0, 0, .1);
+    background: rgb(0 0 0 / 10%);
     border: solid 2px white;
     border-radius: 50%;
     padding: 0;
