--- a/src/ui/people/PeopleContent.css
+++ b/src/ui/people/PeopleContent.css
@@ -3,7 +3,7 @@
     background-color: white;
     border-bottom-left-radius: 1rem;
     border-bottom-right-radius: 1rem;
-    padding: 0 1rem 1rem;
+    padding: .5rem 1rem 1rem;
     min-height: 25vh;
 }
 
