--- a/src/ui/page/Page.css
+++ b/src/ui/page/Page.css
@@ -6,6 +6,7 @@
         grid-template-rows: auto;
         column-gap: 1rem;
         margin: 0 auto;
+        padding: 0 .5rem;
     }
 
     .page-left-pane {
@@ -35,6 +36,7 @@
         grid-template-columns: minmax(16.5rem, 20.25rem) minmax(600px, var(--feed-width));
         grid-template-rows: auto;
         column-gap: 1rem;
+        padding: 0 .5rem;
     }
 
     .page-left-pane {
