Moved the node name management menu to ProfileSidebar.

--- a/src/ui/profile/ProfileSidebar.css
+++ b/src/ui/profile/ProfileSidebar.css
@@ -23,6 +23,14 @@
     padding-right: 0;
 }
 
+#profile-sidebar .management-menu {
+    place-self: start end;
+}
+
+#profile-sidebar .management-menu .menu {
+    padding-right: 0;
+}
+
 #profile-sidebar .full-name {
     color: var(--bs-gray-900);
     font-weight: 600;
