--- a/src/ui/instant/Instants.css
+++ b/src/ui/instant/Instants.css
@@ -52,18 +52,21 @@
     background-color: var(--highlight);
 }
 
-#instants > .footer {
-    height: 2.5rem;
-    padding: .75rem .75rem 0;
-    margin-top: 1rem;
-    margin-bottom: -.25rem;
-    border-top: 1px solid var(--bs-gray-100);
-    display: flex;
-    justify-content: space-between;
+@media only screen and (min-width: 992px) {
+    #instants > .footer {
+        height: 2.5rem;
+        padding: .75rem .75rem 0;
+        margin-top: 1rem;
+        margin-bottom: -.25rem;
+        border-top: 1px solid var(--bs-gray-100);
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 @media only screen and (max-width: 991px) {
     #instants > .footer {
+        padding: .25rem .75rem 0;
         margin-bottom: .3rem;
     }
 }
@@ -96,7 +99,7 @@
     #instants > .content {
         max-width: 100vw;
         max-height: unset;
-        height: calc(100vh - 10.65rem);
+        height: calc(100vh - 8.45rem);
     }
 }
 
