Correct positioning of the selection mark for persons having long names that occupy several lines.

--- a/src/ui/people/PeoplePerson.css
+++ b/src/ui/people/PeoplePerson.css
@@ -39,7 +39,7 @@
     width: 1.2rem;
     height: 1.2rem;
     right: .25rem;
-    bottom: 0;
+    top: 30px;
 }
 
 .people-page .person .avatar-selector .selection.selected {
