More universal tabbed-page style for top-level pages joined by tab navigation.

--- a/src/ui/profile/ProfilePage.css
+++ b/src/ui/profile/ProfilePage.css
@@ -1,39 +1,5 @@
-.profile-page #back-box .underlined-tabs {
-    border-radius: 1rem;
-}
-
 @media only screen and (max-width: 991px) {
-    .profile-page #back-box {
-        top: 4rem;
-    }
-
-    .profile-page #back-box .underlined-tabs {
-        border-radius: 0;
-        padding: 0 .25rem;
-    }
-}
-
-@media only screen and (min-width: 992px) {
-    .profile-page #back-box {
-        padding-top: 1rem;
-    }
-}
-
-.profile-page .mobile-back {
-    background-color: white;
-}
-
-.profile-page .mobile-back.mobile-back-shadow {
-    box-shadow: none;
-}
-
-.profile-page .desktop-back {
-    margin-top: 0;
-    margin-bottom: -.5rem;
-}
-
-@media only screen and (max-width: 991px) {
-    .profile-about-page {
+    .profile-page {
         padding-bottom: 3rem;
         background-color: white;
         min-height: 100vh;
