--- a/src/ui/search/SearchPage.css
+++ b/src/ui/search/SearchPage.css
@@ -8,6 +8,12 @@
     }
 }
 
+@media only screen and (min-width: 992px) {
+    .search-page .feed-top-box {
+        top: 5rem;
+    }
+}
+
 .search-page .nodes {
     display: grid;
     grid-template-columns: calc(44px + .5rem) auto min-content;
