New design of ReactionsDialog: tabs and the list of reactions (without the subscription button).

--- a/src/ui/control/UnderlinedTabs.css
+++ b/src/ui/control/UnderlinedTabs.css
@@ -55,3 +55,7 @@
 .underlined-tabs .tab.active:hover {
     background-color: transparent;
 }
+
+.underlined-tabs .tab .twemoji {
+    vertical-align: -.25em;
+}
