--- a/src/ui/reactionsdialog/ReactionsListView.css
+++ b/src/ui/reactionsdialog/ReactionsListView.css
@@ -18,8 +18,14 @@
     overflow-x: hidden;
 }
 
+.reactions-dialog .items.list .item .details .owner-name {
+    display: flex;
+    align-items: end;
+    gap: .25em;
+}
+
 .reactions-dialog .items.list .item .details .node-name {
-    display: inline-block;
+    display: block;
     max-width: calc(100% - 1.5em);
     overflow: hidden;
     white-space: nowrap;
@@ -30,7 +36,15 @@
 }
 
 .reactions-dialog .items.list .item .details .signature-verify-button {
-    vertical-align: .5em;
+    display: block;
+    padding-bottom: .075em;
+}
+
+.reactions-dialog .items.list .item .details .status {
+    color: var(--bs-gray-600);
+    font-size: .88rem;
+    font-weight: 400;
+    line-height: 133%;
 }
 
 .reactions-dialog .items.list .item .reaction {
