--- a/src/ui/mainmenu/DesktopMainMenu.css
+++ b/src/ui/mainmenu/DesktopMainMenu.css
@@ -7,3 +7,8 @@
 #main-menu .nav-item .nav-link {
     text-transform: uppercase;
 }
+
+#main-menu .home-avatar {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
