--- a/src/ui/mainmenu/connections/HomeAvatar.css
+++ b/src/ui/mainmenu/connections/HomeAvatar.css
@@ -1,7 +1,3 @@
 .home-avatar {
-    margin-left: 1rem;
-}
-
-.home-avatar:hover {
-    border: 1px solid rgb(255 255 255 / 70%);
+    cursor: pointer;
 }
