--- a/src/ui/mainmenu/DesktopMainMenu.css
+++ b/src/ui/mainmenu/DesktopMainMenu.css
@@ -8,7 +8,7 @@
     text-transform: uppercase;
 }
 
-#main-menu .home-avatar {
+#main-menu SPAN:has(.home-avatar) {
     margin-left: 1rem;
     margin-right: 1rem;
 }
