--- a/src/ui/mainmenu/connections/Connections.css
+++ b/src/ui/mainmenu/connections/Connections.css
@@ -1,81 +1,95 @@
-#connections .connection-item {
-    display: flex;
+#connections {
+    padding: 1rem;
+    width: 25rem;
 }
 
-#connections .connection-item.active {
-    background-color: var(--highlight-cyan);
-}
-
-#connections .connection-item:hover {
-    background-color: var(--highlight);
-}
-
-#connections .connection-item.active:hover {
-    background-color: var(--highlight-cyan);
-}
-
-#connections .connection {
-    flex: auto;
-    padding: 0.5em;
+#connections .connection-item .connection {
+    display: block;
     cursor: pointer;
+    border-radius: .25rem;
+    padding: .75rem 4rem .75rem 1rem;
+}
+
+#connections .connection-item .connection:hover {
+    background-color: var(--highlight);
 }
 
 #connections .connection-item.active .connection {
-    cursor: default;
+    background: var(--primary-50);
 }
 
-#connections .connection .node-name {
-    font-size: 120%;
+#connections .connection-item.active + .connection-item {
+    padding-top: .5rem;
+    margin-top: .5rem;
+    border-top: 1px solid var(--bs-gray-200);
 }
 
-#connections .connection .no-name {
-    font-size: 120%;
+#connections .connection-item .connection .node-name {
+    display: block;
+    padding-bottom: .25rem;
+    font-weight: 600;
+    font-size: 1.25rem;
+    line-height: 120%;
+    color: var(--bs-gray-900);
+    text-decoration: none;
+}
+
+#connections .connection-item.active .connection .node-name {
+    color: var(--primary-800);
+}
+
+#connections .connection-item .connection .no-name {
+    padding-bottom: .25rem;
+    font-weight: 600;
+    font-size: 1.25rem;
     font-style: italic;
+    line-height: 120%;
     color: var(--bs-gray-600);
+}
+
+#connections .connection-item .connection .location {
+    display: block;
+    padding-bottom: .25rem;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 150%;
+    color: var(--bs-gray-900);
 }
 
 #connections .connection .connected {
+    font-weight: 400;
+    font-size: .88rem;
+    line-height: 150%;
     color: var(--bs-gray-600);
 }
 
-#connections .connection-add {
-    color: var(--bs-primary);
+#connections .connection-item .disconnect {
+    padding: .25rem 1rem;
+    color: var(--bs-gray-900);
+    font-weight: 400;
+    font-size: 1.12rem;
+    line-height: 150%;
     cursor: pointer;
-    font-size: 120%;
-    padding: 0.5em;
+    margin-top: .5rem;
+}
+
+#connections .connection-item .disconnect:hover {
+    text-decoration: underline;
+}
+
+#connections .connection-add {
+    margin-top: .5rem;
+    border-top: 1px solid var(--bs-gray-200);
+    padding: .75rem 1rem .25rem;
+    color: var(--secondary-800);
+    cursor: pointer;
+    font-weight: 500;
+    font-size: 1.12rem;
+    line-height: 150%;
+    display: flex;
+    gap: .5rem;
 }
 
 #connections .connection-add:hover {
-    background-color: var(--highlight);
-}
-
-#connections .connection-buttons {
-    flex: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    margin: 0.5em;
-}
-
-#connections .connection-buttons .link {
-    display: block;
-    flex: none;
-    color: var(--bs-gray-500);
-    font-size: 1.1em;
-}
-
-#connections .connection-buttons .link:hover {
-    color: var(--bs-primary);
-}
-
-#connections .connection-buttons .disconnect {
-    flex: none;
-    color: var(--bs-gray-500);
-    cursor: pointer;
-    font-size: 1.3em;
-    margin-top: 0.2em;
-}
-
-#connections .connection-buttons .disconnect:hover {
-    color: var(--bs-red);
+    text-decoration: underline;
 }
