--- a/src/ui/search/SearchPage.css
+++ b/src/ui/search/SearchPage.css
@@ -10,7 +10,7 @@
 
 @media only screen and (min-width: 992px) {
     .search-page .feed-top-box {
-        top: 5rem;
+        top: calc(var(--page-header-height) + 2.3rem);
     }
 }
 
