--- a/src/ui/mainmenu/DesktopMainMenu.css
+++ b/src/ui/mainmenu/DesktopMainMenu.css
@@ -1,11 +1,35 @@
 #main-menu {
-    padding-top: 0;
-    padding-bottom: 0;
-    flex-wrap: nowrap;
+    position: sticky;
+    top: 0;
+    width: 100%;
+    height: 4.25rem;
+    z-index: var(--zindex-page-header);
+    background-color: white;
 }
 
-#main-menu .nav-item .nav-link {
-    text-transform: uppercase;
+#main-menu .main-menu-content {
+    display: grid;
+    grid-template-columns: 1fr 30rem 1fr;
+    align-items: center;
+    max-width: calc(var(--feed-width) + 45.5rem);
+    height: 100%;
+    margin: 0 auto;
+}
+
+#main-menu .main-menu-left-pane {
+    grid-column: 1;
+    justify-self: start;
+    margin-left: 2rem;
+}
+
+#main-menu .main-menu-center-pane {
+    grid-column: 2;
+    justify-self: center;
+}
+
+#main-menu .main-menu-right-pane {
+    grid-column: 3;
+    justify-self: end;
 }
 
 #main-menu SPAN:has(.home-avatar) {
