--- a/src/ui/page/BackBox.css
+++ b/src/ui/page/BackBox.css
@@ -21,7 +21,7 @@
 
 @media only screen and (min-width: 992px) {
     #back-box {
-        top: 2.7rem;
+        top: var(--page-header-height);
         padding-top: .25rem;
         background-color: var(--body-bg);
     }
