--- a/src/ui/instant/InstantBell.css
+++ b/src/ui/instant/InstantBell.css
@@ -1,15 +1,20 @@
 .bell-button {
     position: relative;
+    width: 2.5rem;
+    height: 2.5rem;
+
+    --bs-btn-color: var(--bs-gray-600);
 }
 
 .bell-button .count {
     position: absolute;
-    top: -0.2rem;
+    top: -.2rem;
     right: 0;
     background-color: var(--bs-danger);
+    border-radius: .25rem;
     color: white;
     font-weight: bold;
-    font-size: 0.7rem;
-    padding-left: 0.2rem;
-    padding-right: 0.2rem;
+    font-size: .7rem;
+    padding-left: .2rem;
+    padding-right: .2rem;
 }
