--- a/src/ui/zindex.css
+++ b/src/ui/zindex.css
@@ -2,8 +2,8 @@
     --zindex-text-overlay: 1;
     --zindex-input-overlay: 6;
     --zindex-overlay-loading: 895;
-    --zindex-page-header: 900;
-    --zindex-page-header-buttons: 940;
+    --zindex-back-box: 900;
+    --zindex-page-header: 940;
     --zindex-feed-top-button: 950;
     --zindex-dropdown: 1000; /* Bootstrap */
     --zindex-sticky: 1020; /* Bootstrap */
